Fixes: Date input fires too soon, display corrupted when task description too long - for the date bug, listen for 'blur' rather than 'change' - for description too long, add CSS class limited-text

--- a/src/style.css
+++ b/src/style.css
@@ -113,6 +113,13 @@ h1 {
   grid-template-rows: 1fr 1fr;
 }
 
+.limited-text {
+  max-width: 95%; /* Set the maximum width of the div */
+  overflow: hidden; /* Hide the content that exceeds the max-width */
+  white-space: nowrap; /* Prevent the text from wrapping to a new line */
+  text-overflow: ellipsis; /* Add ellipsis (...) to indicate the text is truncated */
+}
+
 .focus-btn {
   margin: 3px 15px 3px 0;
   cursor: pointer;
